--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "metalcut",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "A web application for metal cutting cost estimation and order management",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "client": "cd client && npm start",
-    "dev:full": "concurrently \"npm run dev\" \"npm run client\""
+    "dev:full": "concurrently \"npm run dev\" \"npm run client\"",
+    "version": "node scripts/version.js",
+    "release:patch": "npm version patch",
+    "release:minor": "npm version minor",
+    "release:major": "npm version major"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -22,5 +26,22 @@
   "devDependencies": {
     "nodemon": "^3.0.2",
     "concurrently": "^8.2.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yourusername/metalcut.git"
+  },
+  "keywords": [
+    "metal",
+    "cutting",
+    "cost-estimation",
+    "3d-modeling",
+    "manufacturing"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/yourusername/metalcut/issues"
+  },
+  "homepage": "https://github.com/yourusername/metalcut#readme"
 } 
